--- a/app/heroes.component.html
+++ b/app/heroes.component.html
@@ -2,6 +2,9 @@
 <ul  class="heroes">
     <li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
         <span class="badge">{{hero.id}}</span> {{hero.name}}
+        <!-- stopPropagation, otherwise click on li would be called and select a hero that has been deleted -->
+        <button class="delete"
+                (click)="delete(hero); $event.stopPropagation()">x</button>
     </li>
 </ul>
 <div *ngIf="selectedHero">
@@ -11,8 +14,8 @@
     <button (click)="goToDetail()">View Details</button>
 </div>
 <div>
-    <label>Hero name:</label> <input #heroName />
-    <button (click)="add(heroName.value); heroName.value=''">
-        Add
-    </button>
+   <label>Hero name:</label> <input #heroName />
+   <button (click)="add(heroName.value); heroName.value=''">
+       Add
+   </button>
 </div>
